added some lighting and camera controls
-current lighting are thruster lighting and ambient lighting
-camera modes include
--normal moving with lander
--slightly buggy tracking on ground
--internal
--top down
-also made altitude enabled on default and thruster timer decrease when using thruster based on requirements

--- a/3D-Landing-Simulation-Game.vcxproj.filters
+++ b/3D-Landing-Simulation-Game.vcxproj.filters
@@ -58,6 +58,9 @@
     <ClCompile Include="src\Util.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="src\ExplosionEmitter.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="src">
@@ -416,13 +419,13 @@
     <ClInclude Include="src\vector3.h">
       <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="src\ParticleSystem.h">
-      <Filter>src</Filter>
-    </ClInclude>
     <ClInclude Include="src\Shape.h">
       <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="src\Emitter.h">
+    <ClInclude Include="src\ExplosionEmitter.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="src\ParticleEmitter.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
