--- a/3D-Landing-Simulation-Game.vcxproj
+++ b/3D-Landing-Simulation-Game.vcxproj
@@ -119,6 +119,7 @@
     <ClCompile Include="..\..\..\addons\ofxGui\src\ofxSliderGroup.cpp" />
     <ClCompile Include="..\..\..\addons\ofxGui\src\ofxToggle.cpp" />
     <ClCompile Include="src\box.cc" />
+    <ClCompile Include="src\ExplosionEmitter.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\Octree.cpp" />
     <ClCompile Include="src\ofApp.cpp" />
@@ -225,10 +226,10 @@
     <ClInclude Include="..\..\..\addons\ofxGui\src\ofxSliderGroup.h" />
     <ClInclude Include="..\..\..\addons\ofxGui\src\ofxToggle.h" />
     <ClInclude Include="src\box.h" />
-    <ClInclude Include="src\Emitter.h" />
+    <ClInclude Include="src\ExplosionEmitter.h" />
     <ClInclude Include="src\Octree.h" />
     <ClInclude Include="src\ofApp.h" />
-    <ClInclude Include="src\ParticleSystem.h" />
+    <ClInclude Include="src\ParticleEmitter.h" />
     <ClInclude Include="src\ray.h" />
     <ClInclude Include="src\Shape.h" />
     <ClInclude Include="src\Util.h" />
